fix flickering when changin date

--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -55,6 +55,7 @@ li {
 #heatmap {
   width: calc(12 * 60px);
   height: calc(4 * 60px + 1px);
+  position: relative;
 }
 
 #heatmap canvas {
